# autoprep-env

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  graders.py  models.py  tasks.py
server/: app.py
